[package]
name = "maypaper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
env = "1.0.1"
anyhow = "1.0.100"
tokio = "1.48.0"
axum = "0.8.8"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
rust-embed = "8.9.0"
qmetaobject = "0.2.10"
